# QFaceRecognition

./: CMakeLists.txt
